--- a/css/grid.css
+++ b/css/grid.css
@@ -3,18 +3,31 @@
   flex-wrap: wrap;
 }
 
-.xs-1 {
-  width: 100%;
-}
-
 @media only screen and (min-width: 25em) {
 
-  .s-1 {
+  .unit-m-1 {
     width: 100%;
   }
 
-  .m-1-2 {
+}
+
+@media only screen and (min-width: 38em) {
+
+  .img-flex {
     width: 50%;
+  }
+
+  .unit-m-1-2 {
+    display: flex;
+    width: 50%;
+  }
+
+}
+
+@media only screen and (min-width: 60em) {
+
+  .unit-l-1-3 {
+    width: 25%;
   }
 
 }
